# gr-ettus

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  README.md
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: ettusConfig.cmake  gnuradio-ettusConfig.cmake
docs/: CMakeLists.txt  README.ettus
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
examples/rfnoc/: rfnoc_adder.grc  rfnoc_ddc.grc  rfnoc_debug.grc  rfnoc_digital_gain.grc  rfnoc_digital_gain_network_host.grc  rfnoc_digital_gain_network_usrp.grc  rfnoc_dma_fifo.grc  rfnoc_duc.grc  rfnoc_fft.grc  rfnoc_fft_network_host.grc  rfnoc_fft_network_usrp.grc  rfnoc_fir.grc  rfnoc_fir_fft.grc  rfnoc_fir_filter.grc  rfnoc_fir_network_host.grc  rfnoc_fir_network_usrp.grc  rfnoc_fir_tx.grc  rfnoc_fosphor.grc  rfnoc_fosphor_network_host.grc  rfnoc_loopback_on_fpga.grc  (+15 more)
grc/: CMakeLists.txt  ettus.tree.yml  ettus_block_tree.xml  ettus_device3.block.yml  ettus_fosphor_display.block.yml  ettus_fpga_ddc.block.yml  ettus_fpga_duc.block.yml  ettus_fpga_fft.block.yml  ettus_fpga_radio.block.yml  ettus_fpga_sep.block.yml  ettus_fpga_x310.block.yml  ettus_rfnoc_adder.block.yml  ettus_rfnoc_ddc.block.yml  ettus_rfnoc_debug.block.yml  ettus_rfnoc_digital_gain.block.yml  ettus_rfnoc_dma_fifo.block.yml  ettus_rfnoc_duc.block.yml  ettus_rfnoc_fft.block.yml  ettus_rfnoc_fifo.block.yml  ettus_rfnoc_fir.block.yml  ettus_rfnoc_fosphor.block.yml  ettus_rfnoc_fosphor_display.block.yml  ettus_rfnoc_graph.block.yml  ettus_rfnoc_keep_one_in_n.block.yml  ettus_rfnoc_logpwr.block.yml  ettus_rfnoc_moving_avg.block.yml  ettus_rfnoc_ofdmdemap.block.yml  ettus_rfnoc_ofdmequ.block.yml  ettus_rfnoc_packet_resizer.block.yml  ettus_rfnoc_pdu_rx.block.yml  ettus_rfnoc_pdu_tx.block.yml  ettus_rfnoc_radio.block.yml  ettus_rfnoc_register_logger.block.yml  ettus_rfnoc_register_probe.block.yml  ettus_rfnoc_rx_radio.block.yml  ettus_rfnoc_rx_streamer.block.yml  ettus_rfnoc_schmidlcox.block.yml  ettus_rfnoc_siggen.block.yml  ettus_rfnoc_split_stream.block.yml  ettus_rfnoc_tx_radio.block.yml  (+42 more)
include/ettus/: CMakeLists.txt  api.h  barrier.h  device3.h  fosphor_display.h  rfnoc_block.h  rfnoc_block_generic.h  rfnoc_block_impl.h  rfnoc_common.h  rfnoc_ddc.h  rfnoc_duc.h  rfnoc_fir_cci.h  rfnoc_fir_filter.h  rfnoc_fosphor_c.h  rfnoc_generic.h  rfnoc_generic_multi.h  rfnoc_graph.h  rfnoc_pdu_rx.h  rfnoc_pdu_tx.h  rfnoc_radio.h  rfnoc_rx_radio.h  rfnoc_rx_streamer.h  rfnoc_siggen.h  rfnoc_streamer.h  rfnoc_tx_radio.h  rfnoc_tx_streamer.h  rfnoc_vector_iir_cc.h  rfnoc_window.h  rfnoc_window_cci.h
lib/: CMakeLists.txt  QFosphorColorMapper.cc  QFosphorColorMapper.h  QFosphorSurface.cc  QFosphorSurface.h  axis.h  device3.cc  fosphor_display_impl.cc  fosphor_display_impl.h  gr_uhd_common.h  qa_ettus.cc  qa_ettus.h  rfnoc_block.cc  rfnoc_block_generic_impl.cc  rfnoc_block_generic_impl.h  rfnoc_block_impl.cc  rfnoc_block_impl.h  rfnoc_common.cc  rfnoc_common.h  rfnoc_ddc_impl.cc  rfnoc_ddc_impl.h  rfnoc_duc_impl.cc  rfnoc_duc_impl.h  rfnoc_fir_cci_impl.cc  rfnoc_fir_cci_impl.h  rfnoc_fir_filter_impl.cc  rfnoc_fir_filter_impl.h  rfnoc_fosphor_c_impl.cc  rfnoc_fosphor_c_impl.h  rfnoc_generic_impl.cc  rfnoc_generic_impl.h  rfnoc_generic_multi_impl.cc  rfnoc_generic_multi_impl.h  rfnoc_graph_impl.cc  rfnoc_pdu_rx_impl.cc  rfnoc_pdu_rx_impl.h  rfnoc_pdu_tx_impl.cc  rfnoc_pdu_tx_impl.h  rfnoc_radio_impl.cc  rfnoc_radio_impl.h  (+19 more)
python/: CMakeLists.txt  __init__.py  fosphor_histo_framer.py  rfnoc_register_probe.py
python/ettus/bindings/: CMakeLists.txt  failed_conversions.txt  fosphor_display_python.cc  python_bindings.cc  rfnoc_block_generic_python.cc  rfnoc_block_python.cc  rfnoc_ddc_python.cc  rfnoc_duc_python.cc  rfnoc_fir_filter_python.cc  rfnoc_graph_python.cc  rfnoc_rx_radio_python.cc  rfnoc_rx_streamer_python.cc  rfnoc_siggen_python.cc  rfnoc_tx_radio_python.cc  rfnoc_tx_streamer_python.cc  rfnoc_window_python.cc
python/ettus/bindings/docstrings/: fosphor_display_pydoc_template.h  rfnoc_block_generic_pydoc_template.h  rfnoc_block_pydoc_template.h  rfnoc_ddc_pydoc_template.h  rfnoc_duc_pydoc_template.h  rfnoc_fir_filter_pydoc_template.h  rfnoc_graph_pydoc_template.h  rfnoc_rx_radio_pydoc_template.h  rfnoc_rx_streamer_pydoc_template.h  rfnoc_siggen_pydoc_template.h  rfnoc_tx_radio_pydoc_template.h  rfnoc_tx_streamer_pydoc_template.h  rfnoc_window_pydoc_template.h
python/ettus/rfnoc_modtool/rfnoc-newmod/python/rfnoc_example/bindings/: CMakeLists.txt  python_bindings.cc
python/rfnoc_modtool/: CMakeLists.txt  __init__.py  cmakefile_editor.py  code_generator.py  grc_xml_generator.py  modtool_add.py  modtool_base.py  modtool_disable.py  modtool_help.py  modtool_info.py  modtool_makexml.py  modtool_newmod.py  modtool_rename.py  modtool_rm.py  parser_cc_block.py  scm.py  templates.py  templates_mod_orig.py  util_functions.py
python/rfnoc_modtool/rfnoc-newmod/: CMakeLists.txt  MANIFEST.md  README.md
python/rfnoc_modtool/rfnoc-newmod/cmake/: setupenv.sh
python/rfnoc_modtool/rfnoc-newmod/cmake/Modules/: Findfpga.cmake  rfnoc_exampleConfig.cmake
python/rfnoc_modtool/rfnoc-newmod/docs/: README.rfnoc_example
python/rfnoc_modtool/rfnoc-newmod/docs/doxygen/: Doxyfile.in  swig_doc.py
python/rfnoc_modtool/rfnoc-newmod/docs/doxygen/doxyxml/: __init__.py  base.py
python/rfnoc_modtool/rfnoc-newmod/docs/doxygen/other/: group_defs.dox  main_page.dox
python/rfnoc_modtool/rfnoc-newmod/grc/: CMakeLists.txt
python/rfnoc_modtool/rfnoc-newmod/include/rfnoc_example/: CMakeLists.txt  api.h
python/rfnoc_modtool/rfnoc-newmod/lib/: CMakeLists.txt  qa_rfnoc_example.h
python/rfnoc_modtool/rfnoc-newmod/python/: CMakeLists.txt  __init__.py
python/rfnoc_modtool/rfnoc-newmod/rfnoc/blocks/: CMakeLists.txt
python/rfnoc_modtool/rfnoc-newmod/rfnoc/fpga-src/: Makefile.srcs
python/rfnoc_modtool/rfnoc-newmod/swig/: CMakeLists.txt  rfnoc_example_swig.i
swig/: CMakeLists.txt  ettus_swig.i  uhd_swig.i
web/: canvas-3d.html  cmap.json  fosphor.js  fosphor_em.js  fosphor_em.js.mem  fs-cmap.glsl  fs-color.glsl  fs-tex.glsl  server.py  vs-basic.glsl
(+63 files in other folders)
